--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.6.0
   firebase_storage: ^12.3.4
+  image_picker_for_web: ^3.0.6
+  image_picker_platform_interface: ^2.10.0
 
 dev_dependencies:
   flutter_test:
